test/functions/iterators/errors/mismatchedArgsS64-L64-F8.future
error message: Improve this error message for mismatched iterators
#24215

The error message shouldn't refer to an internal module.
